--- a/angular.json
+++ b/angular.json
@@ -6,8 +6,13 @@
     "analytics": false
   },
   "projects": {
-    "expense-control-android2": {
+    "expense-control-android-tauri": {
       "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -15,12 +20,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/expense-control-android2",
+            "outputPath": "dist/expense-control-android-tauri",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": ["src/assets"],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.scss"
+            ]
           },
           "configurations": {
             "production": {
@@ -53,13 +63,38 @@
           },
           "configurations": {
             "production": {
-              "buildTarget": "expense-control-android2:build:production"
+              "buildTarget": "expense-control-android-tauri:build:production"
             },
             "development": {
-              "buildTarget": "expense-control-android2:build:development"
+              "buildTarget": "expense-control-android-tauri:build:development"
             }
           },
           "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
+            ],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.scss"
+            ],
+            "scripts": []
+          }
         }
       }
     }
